# pdns

pdns/: .gitignore  CMakeLists.txt  Makefile-recursor  config-recursor.h  config.h  configure-recursor  dist-recursor  dnslabeltext.cc  dnspacket.hh  dnsparser.cc  dnsparser.hh  dnswriter.cc  dnswriter.hh  dynhandler.hh  dynloader.cc  iputils.hh  json.cc  json_ws.cc  logger.cc  logger.hh  lua-pdns.cc  lua-recursor.cc  misc.hh  pdns_recursor.cc  rec_channel.cc  rec_channel_rec.cc  rec_control.cc  receiver.cc  recursor_cache.cc  rrl.cc  rrl.hh  rrl_cleaning.cc  rrl_cleaning.hh  rrl_config.cc  rrl_config.hh  rrl_functions.cc  rrl_functions.hh  rrl_impl.cc  rrl_impl.hh  rrl_limits.cc  (+18 more)
pdns/debian/: README.Debian  changelog  control  copyright  files  pdns-recursor.substvars  postinst  postrm  prerm  rules
pdns/sysdeps-recursor/: Linux.inc
